    - Migration to this version will acknowledge the removal of 'crafting_combinator:settings-entity (programmable-speaker)' and its related objects, this is expected
  Bugfixes:
    - Fixed possible duping if an incorrect recipe is sent to cc (https://github.com/theRustyKnife/CraftingCombinator/issues/70)
    - Fixed GUI behaviour when its associated cc/rc is destroyed
  Features:
    - Blueprints and ghosts now carry cc and rc data
    - New sticky behaviour: Craft-n-before-switch
      - This behaviour addresses the changing or flip-flopping of recipes due to the loss of signal caused by crafting machine's buffer (be it in the input slot or the "limbo" while the machine is crafting) (https://github.com/theRustyKnife/CraftingCombinator/issues/64)
      - This is how it currently works: if a cc needs to change or clear a recipe with the setting enabled (more than 0), it will enter sticky mode for that amount of craft cycles and not respond to any signal change
      - By default a new/migrated cc is set to Craft-1-before-switch
  Locale:
    - Fixed duplicate key for cs.cfg
    - Missing translations for new keys: 'time-multiplier:tooltip', 'sticky', 'craft-n-before-switch', 'craft-n-before-switch:tooltip', [blueprint]
  Changes:
    - Optimized idle performance (https://github.com/theRustyKnife/CraftingCombinator/pull/71)
    - Event registration now uses filters
    - Improved event handling for module chest, uses mine-entity instead of manual inventory management
    - Depreciated the usage of programmable speaker to store bp settings (settings-parser module)
---------------------------------------------------------------------------------------------------
Version: 0.16.3
Date: 11. 12. 2021
  Changes:
    - Added custom symbol sprite for recipe combinator, courtesy of sticklord (https://forums.factorio.com/viewtopic.php?p=555453#p555453)
---------------------------------------------------------------------------------------------------
Version: 0.16.2